Fix radio alignment (#865)

--- a/less/dialog/download.less
+++ b/less/dialog/download.less
@@ -110,6 +110,9 @@
     }
 
     .download-json-options {
+        > div {
+          margin: 1rem 0;
+        }
 
         > div > label {
             width: 8.5rem;
@@ -126,11 +129,6 @@
                     cursor: pointer;
                     display: inline;
                 }
-                float: left;
-                width: 50%;
-            }
-            li:first-child {
-                width: 45%;
             }
         }
     }
